# fastapi_chromium_desktop_boilerplate

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  backend.py  build.bat  build_appimg.sh  build_assets.py  config.py  main.py  prepare_build.py  pyproject.toml  server.py  utils.py
app/: build_asset.py  config.py  utils.py
app/backend/: __init__.py  constants.py
app/frontend/: index.html
app/frontend/static/: main.js
backend/: __init__.py  middleware.py
backend/routes/: static.py  system.py
frontend/: index.html
