[project]
name = "fastapi_chromium_desktop_boilerplate"
version = "0.3.0"
description = "Boilerplate for a desktop app with FastAPI as the backend and Ungoogled Chromium as the frontend."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "psutil>=7.2.2",
    "requests>=2.32.5",
    "toml>=0.10.2",
    "uvicorn>=0.41.0",
    "zstandard>=0.25.0",
]

[dependency-groups]
dev = [
    "nuitka[onefile]>=4.0.4",
    "tqdm>=4.67.3",
]
